@@ -116,3 +116,4 @@
 - Increase drop rate of Sinister Key to 1/12 - aweinstock
 - Strike spells now always max on Salarin, convert Yanille Agility Dungeon to kotlin + listener - aweinstock
 - Refactor NPCDropTable, WeightBasedTable and fixed bug where special items weren't processed in some cases - ryannathans
+- Fixed issues with Adventure bot assembly and initial spawning into game world - Sir Kermit
